<resources>
    <string name="app_name">Meu Projeto</string>
    <string name="acesse_j_sua_conta">Acesse já sua conta!</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="todo">TODO</string>
    <string name="ainda_n_o_cadastrado">Ainda não é cadastrado?</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="e_assim_todos_ganham">E assim, todos ganham!!</string>
    <string name="os_alunos_solicitam_a_participa_o_no_projeto">Os alunos solicitam a participação no projeto</string>
    <string name="projetos_academicos">projetos academicos!</string>
    <string name="podem_interagir_na_escolha_de">podem interagir na escolha de</string>
    <string name="os_professores_adicionam_seus_projetos">Os professores adicionam seus projetos</string>
    <string name="no_meu_projeto_alunos_e_professores">No Meu Projeto Alunos e Professores</string>
    <string name="os_alunos_solicitam_a_participa_o">Os alunos solicitam a participação</string>
    <string name="alunos">Alunos</string>
    <string name="professores">Professores</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="status">Status</string>
    <string name="descri_o">Descrição</string>
    <string name="nome_do_projeto">Nome do projeto</string>
    <string name="cadastro_de_projetos">Cadastro de Projetos</string>
    <string name="cadastre_Se">Cadastre-se</string>
    <string name="repetir_senha">Repetir Senha</string>
    <string name="Senha">Senha</string>
    <string name="curso">Curso</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="cadastro_dos_alunos">Cadastro dos Alunos</string>
    <string name="log_in">Login</string>
    <string name="cadastro_dos_professores">Cadastro dos Professores</string>
    <string name="lo_gin">Login</string>
    <string name="nom_e">Nome</string>
    <string name="e_mail">Email</string>
    <string name="area">Área</string>
    <string name="senh">Senha</string>
    <string name="repetirSenha">Repetir Senha</string>
    <string name="cadastre">Cadastre-se</string>
    <string name="meu_Projeto">Meu Projeto</string>
    <string name="tod_o">TODO</string>
    <string name="senhas">Senha</string>
    <string name="email_log">Email</string>

    <string-array name="status_spinner">
        <item>Proj. Alocado</item>
        <item>Proj. Não Alocado</item>
    </string-array>

    <string-array name="status_spinner_soli">
        <item>Requerido</item>
        <item>Indeferido</item>
    </string-array>
    <string name="title_activity_tela_teste">telaTeste</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_project_prof">Project_prof</string>
    <string name="title_activity_projeto_aluno">ProjetoAluno</string>
    <string name="mudar_o_status_do_candidato">Mudar o status do candidato?</string>
    <string name="atualizar">Atualizar</string>
    <string name="candidatar_se">Candidatar-se</string>
    <string name="matr_cula">Matrícula</string>
    <string name="matr_culaprof">Matrícula</string>
    <string name="alterar_cadastro_prof">Alterar cadastro</string>
    <string name="alterar_cad_prof">Alterar</string>
    <string name="alterar_alun">Alterar</string>
    <string name="no_meuprojeto_voc_professor_pode_cadastrar_seus_projetos_para_que_os_alunos_possam_se_associar">No MeuProjeto você, Professor, pode cadastrar seus projetos para que os alunos possam se associar.</string>
    <string name="como_fazer_isso_muito_f_cil">Como fazer isso?! É muito fácil!</string>
    <string name="_1_na_tela_inicial_est_o_todos_seus_projetos_cadastrados_e_clicando_voc_pode_cadastrar_um_novo_projeto">1: Na tela inicial estão todos seus projetos cadastrados e clicando + você pode cadastrar um novo projeto.</string>
    <string name="_2_ao_fazer_o_cadastro_no_sistema_voc_tamb_m_pode_fazer_o_cadastro_de_projetos_mas_se_desejar_fazer_mais_tarde_basta_clicar_em_n_o_quero_cadastrar_projetos_agora">2: Ao fazer o cadastro no sistema você também pode fazer o cadastro de projetos, mas, se desejar fazer mais tarde basta clicar em NÃO QUERO CADASTRAR PROJETOS AGORA</string>
    <string name="solicita_es_dos_alunos">Solicitações dos Alunos</string>
    <string name="_1_os_alunos_que_solicitarem_a_participa_o_no_projeto_apareceram_em_solicita_es">1: Os alunos que solicitarem a participação no projeto apareceram em SOLICITAÇÕES</string>
    <string name="_2_e_em_alunos_alocados_voc_ver_os_alunos_que_est_o_participando_dos_seus_projetos">2: E em ALUNOS ALOCADOS você verá os alunos que estão participando dos seus projetos</string>
    <string name="alocar_alunos">Alocar Alunos</string>
    <string name="_1_quando_os_alunos_que_ir_o_participar_do_projeto_forem_escolhidos_por_voc_em_solicita_es_dever_ser_mudado_status_do_candidato_para_requerido_assim_o_aluno_saber_que_foi_aprovado">1: Quando os alunos que irão participar do projeto forem escolhidos por você, em SOLICITAÇÕES deverá ser mudado status do Candidato para REQUERIDO, assim, o aluno saberá que foi aprovado.</string>
    <string name="_2_se_o_aluno_n_o_foi_aprovado_o_status_dever_ser_mudado_para_indeferido">2: Se o aluno não foi aprovado o status deverá ser mudado para INDEFERIDO</string>
    <string name="retirando_alunos_do_projeto">Retirando Alunos do projeto</string>
    <string name="_1_um_aluno_alocado_ao_projeto_pode_deixar_de_participar_ao_deletar_o_aluno_do_projeto_em_alunos_alocados">1: Um aluno alocado ao projeto pode deixar de participar ao deletar o aluno do projeto em ALUNOS ALOCADOS</string>
    <string name="fechar_incri_es_em_um_projeto">Fechar incrições em um projeto</string>
    <string name="_1_quando_as_vagas_para_o_projeto_estiverem_completas_voc_dever_mudar_o_status_do_projeto_para_n_o_alocado">1: Quando as vagas para o projeto estiverem completas você deverá mudar o status do projeto para NÃO ALOCADO</string>
    <string name="_2_para_isso_basta_clicar_no_projeto_desejado_e_modificar_o_status_assim_como_as_demais_informa_es_se_desejar">2: Para isso basta clicar no projeto desejado e modificar o status, assim como as demais informações se desejar</string>
    <string name="_3_assim_o_aluno_saber_que_as_inscri_es_para_aquele_projeto_j_est_o_canceladas">3: Assim o aluno saberá que as inscrições para aquele projeto já estão canceladas</string>
    <string name="isso_tudo">Isso é tudo!</string>
    <string name="esse_aplicativo_foi_feito_pelos_jovens_cientistas_do_projeto_de_inicia_o_cientif_ca_mdd_uneb_sobre_a_monitoria_da_professora_ana_patr_cia">Esse aplicativo foi feito pelos jovens cientistas do projeto de Iniciação Cientifíca - MDD(UNEB) sobre a monitoria da professora Ana Patrícia.</string>
    <string name="n_o_quero_cadastrar_projetos_agora">Não quero cadastrar projetos agora</string>
    <string name="name_projeto">Nome Projeto</string>
    <string name="descr">Descrição</string>
    <string name="statuss">Status:</string>
    <string name="aluno_tal">Aluno Tal (Curso de Miçangas)</string>
    <string name="cur">Curso:</string>
    <string name="email_aluno_aluno">Email: aluno@aluno.com</string>
    <string name="solicitado_em">Solicitado em:</string>
    <string name="status_">Status:</string>
    <string name="no_meuprojeto_voc_aluno_pode_solicitar_a_participa_o_em_um_projeto">No MeuProjeto você, Aluno, pode solicitar a participação em um projeto</string>
    <string name="como_fazer_isso_muito_fa_cil">Como fazer isso?! É muito fácil!</string>
    <string name="_1_na_tela_inicial_est_o_todos_os_professoresw_cadastrados_no_sistema">1: Na tela inicial estão todos os professoresw cadastrados no sistema.</string>
    <string name="_2_para_ver_os_projetos_cadastrados_por_esse_professor_basta_clicar_no_professor_da_sua_prefer_ncia">2: Para ver os projetos cadastrados por esse professor basta clicar no professor da sua preferência.</string>
    <string name="solicitando_a_participa_o_em_um_projeto">Solicitando a participação em um projeto</string>
    <string name="_1_ao_clicar_em_um_projeto_todos_os_detalhes_do_mesmo_ser_o_listados">1: Ao clicar em um projeto todos os detalhes do mesmo serão listados</string>
    <string name="_2_quando_o_projeto_estiver_com_o_status_alocado_significa_que_o_professor_j_encerrou_as_inscri_es_para_aquele_projeto">2: Quando o projeto estiver com o status ALOCADO, significa que o professor já encerrou as inscrições para aquele projeto.</string>
    <string name="_3_se_for_do_seu_desejo_se_candidatar_basta_clicar_em_candidatar_se">3: Se for do seu desejo se candidatar basta clicar em CANDIDATAR-SE</string>
    <string name="resultados">Resultados</string>
    <string name="_1_em_solicita_es_todos_os_projetos_que_voc_solicitou_a_participa_o_ser_o_listados">1: Em SOLICITAÇÕES todos os projetos que você solicitou a participação serão listados</string>
    <string name="_2_o_resultado_estar_logo_abaixo_do_nome_do_projeto">2: O resultado estará logo abaixo do nome do projeto</string>
    <string name="_1_o_status_de_uma_solicita_o_ser_solicitado_quando_o_professor_ainda_n_o_analisou">1: O status de uma solicitação será SOLICITADO quando o professor ainda não analisou</string>
    <string name="_2_requerido_se_voc_foi_aceito_no_projeto">2: REQUERIDO se você foi aceito no projeto</string>
    <string name="_3_indeferido_se_voc_n_o_passou">3: INDEFERIDO se você não passou :(</string>
    <string name="isso_udo">Isso é tudo!</string>
    <string name="esse_aplicativo_foi_feito_pelos_jovens_cientistas_do_projeto_de_inicia_o_cientifi_ca_mdd_uneb_sobre_a_monitoria_da_professora_ana_patr_cia">Esse aplicativo foi feito pelos jovens cientistas do projeto de Iniciação Cientifíca - MDD(UNEB) sobre a monitoria da professora Ana Patrícia.</string>
    <string name="solicitacoes_">Solicitações</string>
    <string name="soli_tacoes">Solicitações</string>
    <string name="deletando_a_aloca_o_o_status_do_aluno_ir_mudar_para_indeferido_na_lista_de_candidatos">Deletando a alocação o status do aluno irá mudar para indeferido na lista de candidatos.</string>
    <string name="descria_o">Descrição</string>
</resources>
