<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.meuprojeto.cadastroAluno">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="643dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_dos_alunos"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText5"
            android:layout_marginTop="40dp"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/log_in" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nome" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/curso" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/senha"/>

        <EditText
            android:id="@+id/editText8"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/repetir_senha"/>

        <Button
            android:id="@+id/button_cad_alun"
            style="@style/Button_style"
            android:layout_width="207dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/cadastre_Se" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
