<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.meuprojeto.cadastroProfessor">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="643dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_dos_professores"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/login_Prof"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/lo_gin"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/nome_Prof"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nom_e"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email_Prof"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/area_Prof"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/area"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/senha_Prof"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/senh"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/repete_Prof"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repetirSenha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button2"
            style="@style/Button_style"
            android:layout_width="207dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/cadastre"
            android:onClick="cadProj"
            />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
