<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.meuprojeto.Activity.InfoAluno">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView70"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:gravity="center"
            android:text="@string/no_meuprojeto_voc_aluno_pode_solicitar_a_participa_o_em_um_projeto"
            android:textColor="#184B6C"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:gravity="center"
            android:text="@string/como_fazer_isso_muito_f_cil"
            android:textColor="#184B6C"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView72"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_1_na_tela_inicial_est_o_todos_os_professoresw_cadastrados_no_sistema"
            android:textSize="17sp"
            android:textColor="#184B6C"/>

        <TextView
            android:id="@+id/textView73"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_2_para_ver_os_projetos_cadastrados_por_esse_professor_basta_clicar_no_professor_da_sua_prefer_ncia"
            android:textSize="17sp"
            android:textColor="#184B6C"/>

        <TextView
            android:id="@+id/textView74"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:gravity="center"
            android:text="@string/solicitando_a_participa_o_em_um_projeto"
            android:textColor="#184B6C"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView75"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_1_ao_clicar_em_um_projeto_todos_os_detalhes_do_mesmo_ser_o_listados"
            android:textSize="17sp"
            android:textColor="#184B6C"/>

        <TextView
            android:id="@+id/textView77"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_2_quando_o_projeto_estiver_com_o_status_alocado_significa_que_o_professor_j_encerrou_as_inscri_es_para_aquele_projeto"
            android:textSize="17sp"
            android:textColor="#184B6C"/>

        <TextView
            android:id="@+id/textView76"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_3_se_for_do_seu_desejo_se_candidatar_basta_clicar_em_candidatar_se"
            android:textSize="17sp"
            android:textColor="#184B6C"/>


        <TextView
            android:id="@+id/textView78"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:gravity="center"
            android:text="@string/resultados"
            android:textColor="#184B6C"
            android:textSize="17sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView79"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_1_em_solicita_es_todos_os_projetos_que_voc_solicitou_a_participa_o_ser_o_listados"
            android:textSize="17sp"
            android:textColor="#184B6C"/>

        <TextView
            android:id="@+id/textView81"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_2_o_resultado_estar_logo_abaixo_do_nome_do_projeto"
            android:textSize="17sp"
            android:textColor="#184B6C"/>

        <TextView
            android:id="@+id/textView82"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:gravity="center"
            android:text="Status"
            android:textColor="#184B6C"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView80"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_1_o_status_de_uma_solicita_o_ser_solicitado_quando_o_professor_ainda_n_o_analisou"
            android:textSize="17sp"
            android:textColor="#184B6C"/>

        <TextView
            android:id="@+id/textView83"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_2_requerido_se_voc_foi_aceito_no_projeto"
            android:textSize="17sp"
            android:textColor="#184B6C"/>

        <TextView
            android:id="@+id/textView84"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_3_indeferido_se_voc_n_o_passou"
            android:textSize="17sp"
            android:textColor="#184B6C"/>

        <TextView
            android:id="@+id/textView58"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/isso_tudo"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#184B6C"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_aund" />
        <TextView
            android:id="@+id/textView62"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:gravity="center"
            android:text="@string/esse_aplicativo_foi_feito_pelos_jovens_cientistas_do_projeto_de_inicia_o_cientif_ca_mdd_uneb_sobre_a_monitoria_da_professora_ana_patr_cia"
            android:textColor="#184B6C"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>
